--- a/index.html
+++ b/index.html
@@ -11,19 +11,13 @@
         <img class="img-2" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\logo.png" alt="">
     </nav>
     <div class="Titles">
+    
     <!--This is where Rules start-->
     <span class="Rules">
         <img class="img-rules" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\rules.jpg"
         href="rules.html"alt="">
     </span>
-    <!--This is where Schedule start-->
-    <span class="Rules">
-        <img class="img-rules" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\rules.jpg"
-        href="rules.html"alt="">
-    </span>
-
-
-    
+    <!--This is where Rules start-->
         <ul>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="ban.html">Ban</a></li>
