--- a/index.html
+++ b/index.html
@@ -6,23 +6,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="img-1" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\Header.jpg" alt="">
+        <img class="img-1" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\Header.jpg" alt="" />
     <nav>
-        <img class="img-2" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\logo.png" alt="">
+        <img class="img-2" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\logo.png" alt=""/>
     </nav>
-    <div class="Titles">
-    
-    <!--This is where Rules start-->
-    <span class="Rules">
-        <img class="img-rules" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\rules.jpg"
-        href="rules.html"alt="">
-    </span>
-    <!--This is where Rules start-->
+
+
+
+
+
+    <div class="options">
+        <div class="column1">
+            <!--This is where Rules start-->
+            <span class="Rules">
+                <img class="img-rules" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\rules.jpg"
+                href="rules.html"alt=""/>
+            </span>
+        </div>
+        <div class="column2">
+            <!--This is where Schedule start-->
+            <span class="Schedule">
+                <img class="img-schedule" src="C:\Users\usuario\Desktop\David Estrada\Html\Images\schedule2.webp"
+                href="schedule.html"alt=""/>
+            </span>
+        </div>
+    </div>
+
+
+
+
+
         <ul>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="ban.html">Ban</a></li>
             <li><a href="signup.html">Sign Up</a></li>
         </ul>
-    
 </body>
 </html>
